fixed alignment issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 42px 64px 22px;
+  margin: 42px 64px 0;
 }
 
 #add-product {
@@ -20,11 +20,9 @@ body {
 }
 
 .product-table {
-  @media (max-width: 967px) {
-    padding: 24px 36px;
-  }
-  padding: 24px 100px;
-  font-size: 18px;
+  
+  padding: 24px 36px;
+  /* font-size: 18px; */
 }
 
 .selectedProduct {
